# LutApplicator

./: CMakeLists.txt  CMakePresets.json  README.md
LutApplicator/: CMakeLists.txt  LutApplicator.cpp  LutApplicator.h
LutApplicator/src/private/: FolderWatcher.cpp  ImageProcessor.cpp  Lut3D.cpp  MetadataProcessor.cpp
LutApplicator/src/public/: FileChangeNotification.h  FolderWatcher.h  ImageProcessor.h  Lut3D.h  MetadataProcessor.h
